--- a/ParseStarterProject/build.gradle
+++ b/ParseStarterProject/build.gradle
@@ -24,8 +24,19 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.4.0'
     compile 'com.parse.bolts:bolts-tasks:1.4.0'
     compile 'com.parse:parse-android:1.13.0'
+
+    //Do not change/update Heavy dependency issues
     compile 'com.jakewharton:butterknife:8.0.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.0.1'
+
+    //Rxjava1
+
+    compile 'io.reactivex:rxjava:1.2.0' // RxJava
+    compile 'io.reactivex:rxandroid:1.1.0' // RxAndroid providing Android Scheduler
+    compile 'com.jakewharton.rxbinding:rxbinding:0.4.0' // RxBinding
+    implementation 'com.android.support.constraint:constraint-layout:1.1.0' //Constraint layout
+
+
 
 
 }
