--- a/ParseStarterProject/build.gradle
+++ b/ParseStarterProject/build.gradle
@@ -20,7 +20,8 @@ android {
 }
 
 dependencies {
-   // compile 'com.android.support:support-annotations:23.1.0'
+    // compile 'com.android.support:support-annotations:23.1.0'
+    implementation 'com.android.support:design:23.4.0'
     compile 'com.android.support:appcompat-v7:23.4.0'
     compile 'com.parse.bolts:bolts-tasks:1.4.0'
     compile 'com.parse:parse-android:1.13.0'
@@ -37,7 +38,4 @@ dependencies {
     implementation 'com.android.support.constraint:constraint-layout:1.1.0' //Constraint layout
 
 
-
-
 }
-
