--- a/ParseStarterProject/build.gradle
+++ b/ParseStarterProject/build.gradle
@@ -22,6 +22,7 @@ android {
 dependencies {
     // compile 'com.android.support:support-annotations:23.1.0'
     implementation 'com.android.support:design:23.4.0'
+    implementation 'com.android.support:support-v4:23.4.0'
     compile 'com.android.support:appcompat-v7:23.4.0'
     compile 'com.parse.bolts:bolts-tasks:1.4.0'
     compile 'com.parse:parse-android:1.13.0'
