--- a/ParseStarterProject/src/main/AndroidManifest.xml
+++ b/ParseStarterProject/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
     <application
         android:name=".StarterApplication"
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/flingos_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme">
         <meta-data
