--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Mon Mar 04 16:52:10 IST 2019
-sdk.dir=C\:\\Users\\unameit\\AppData\\Local\\Android\\Sdk
+#Sat Mar 09 17:10:06 IST 2019
+sdk.dir=C\:\\Users\\dutta\\AppData\\Local\\Android\\Sdk
