--- a/ParseStarterProject/build.gradle
+++ b/ParseStarterProject/build.gradle
@@ -20,8 +20,11 @@ android {
 }
 
 dependencies {
-    // compile 'com.android.support:support-annotations:23.1.0'
+   compile 'com.android.support:support-annotations:23.4.0'
+
     implementation 'com.android.support:design:23.4.0'
+    androidTestCompile 'com.android.support:support-annotations:28.0.0'
+
     implementation 'com.android.support:support-v4:23.4.0'
     compile 'com.android.support:appcompat-v7:23.4.0'
     compile 'com.parse.bolts:bolts-tasks:1.4.0'
@@ -34,9 +37,16 @@ dependencies {
     //Rxjava1
 
     compile 'io.reactivex:rxjava:1.2.0' // RxJava
+
     compile 'io.reactivex:rxandroid:1.1.0' // RxAndroid providing Android Scheduler
+
     compile 'com.jakewharton.rxbinding:rxbinding:0.4.0' // RxBinding
+
     implementation 'com.android.support.constraint:constraint-layout:1.1.0' //Constraint layout
+
+    compile 'com.android.support:cardview-v7:23.4.0' //card view
+
+    compile 'com.github.bumptech.glide:glide:3.7.0' //Glide
 
 
 }
