--- a/ParseStarterProject/build.gradle
+++ b/ParseStarterProject/build.gradle
@@ -1,5 +1,6 @@
 apply plugin: 'com.android.application'
 
+
 android {
     compileSdkVersion 23
     buildToolsVersion '27.0.3'
@@ -17,13 +18,27 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    testOptions {
+        unitTests.includeAndroidResources = true
+    }
+
+    sourceSets {
+        test {
+            java.srcDirs = ['src/test/java']
+        }
+
+        main { java.srcDirs = ['src/main/java'] }
+
+
+    }
 }
 
 dependencies {
     compile 'com.android.support:support-annotations:23.4.0'
 
+
     implementation 'com.android.support:design:23.4.0'
-    androidTestCompile 'com.android.support:support-annotations:28.0.0'
+    testImplementation 'com.android.support:support-annotations:28.0.0'
 
     implementation 'com.android.support:support-v4:23.4.0'
     compile 'com.android.support:appcompat-v7:23.4.0'
@@ -47,6 +62,11 @@ dependencies {
     compile 'com.android.support:cardview-v7:23.4.0' //card view
 
     compile 'com.github.bumptech.glide:glide:3.7.0' //Glide
+
+    testImplementation 'junit:junit:4.12'
+    testImplementation 'com.android.support.test:runner:1.0.2'
+    testImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    testImplementation 'org.mockito:mockito-core:2.13.0'
 
 
 }
