--- a/build.gradle
+++ b/build.gradle
@@ -1,17 +1,20 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
     repositories {
+        jcenter()
         mavenCentral()
         google()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.1.3'
 
+
     }
 }
 
 allprojects {
     repositories {
+        jcenter()
         mavenCentral()
         google()
         maven {
@@ -20,6 +23,8 @@ allprojects {
         maven {
             url "https://maven.google.com"
         }
+        maven {
+            url 'http://repo1.maven.org/maven2' }
 
     }
 }
