--- a/ParseStarterProject/build.gradle
+++ b/ParseStarterProject/build.gradle
@@ -63,6 +63,8 @@ dependencies {
 
     compile 'com.github.bumptech.glide:glide:3.7.0' //Glide
 
+    compile 'com.lorentzos.swipecards:library:1.0.9' //Swipecards
+
     testImplementation 'junit:junit:4.12'
     testImplementation 'com.android.support.test:runner:1.0.2'
     testImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
