--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Mon Mar 11 12:56:46 IST 2019
-sdk.dir=C\:\\Users\\unameit\\AppData\\Local\\Android\\Sdk
+#Sat Dec 14 13:24:34 IST 2019
+sdk.dir=C\:\\Users\\666299\\AppData\\Local\\Android\\Sdk
