--- a/ParseStarterProject/build.gradle
+++ b/ParseStarterProject/build.gradle
@@ -37,6 +37,7 @@ dependencies {
     implementation 'androidx.annotation:annotation:1.0.0'
 
 
+    implementation 'com.google.android.gms:play-services-maps:17.0.0'
     testImplementation 'androidx.annotation:annotation:1.0.0'
 
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
@@ -57,7 +58,6 @@ dependencies {
     implementation 'com.jakewharton.rxbinding:rxbinding:0.4.0' // RxBinding
 
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3' //Constraint layout
-
 
 
     implementation 'com.google.code.gson:gson:2.8.5'
