--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Tue Jan 07 12:20:13 IST 2020
-sdk.dir=C\:\\Users\\666299\\AppData\\Local\\Android\\Sdk
+#Sat Jan 11 12:51:22 IST 2020
+sdk.dir=/Users/a374088/Library/Android/sdk
