--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Mon Jan 13 12:28:43 IST 2020
-sdk.dir=C\:\\Users\\666299\\AppData\\Local\\Android\\Sdk
+#Sun Jan 19 12:10:01 IST 2020
+sdk.dir=C\:\\Users\\dutta\\AppData\\Local\\Android\\Sdk
